--- a/pets/related_work.tex
+++ b/pets/related_work.tex
@@ -2,8 +2,8 @@
 \label{sec:related}
 
 To our knowledge, there has been no prior work on preventing surveillance at CDNs, but there 
-has been relevant research on securing CDNs and finding security vulnerabilities in CDNs.\\
-\vspace{0pt}
+has been relevant research on securing CDNs and finding security vulnerabilities in CDNs.
+
 \textbf{Securing CDNs.} Most prior work on securing CDNs has focused on providing content 
 integrity at the CDN as opposed to content confidentiality (and unlinkability).  In 2005, 
 Lesniewski-Laas and Kaashoek use SSL-splitting --- a technique 
@@ -17,15 +17,16 @@ Compare, uses attestation records and a number of peers act as verifiers.  More 
 introduced Stickler, which is a system that allows publishers to guarantee the end-to-end 
 authenticity of their content~\cite{levy2015stickler}.  Stickler includes content publishers 
 signing their content, and users verifying the signature without having to modify the browser.  Unfortunately, 
-systems like Stickler do not protect against an adversary that wishes to learn information about content, clients, 
-or publishers; \system{} is complementary to Stickler.\\
+Stickler does not protect against an adversary that wishes to learn information
+about content, clients, 
+or publishers; \system{} is complementary to Stickler.
 %There has been prior work in securing CDNs against DDoS attacks; Gilad 
 %et al. introduce a DDoS defense called CDN-on-Demand~\cite{gilad2016cdn}.  In this work they 
 %provide a complement to CDNs, as some smaller organizations cannot afford the use of CDNs and 
 %therefore do not receive the DDoS protections provided by them.  CDN-on-Demand is a software 
 %defense that relies on managing flexible cloud resources as opposed to using a CDN provider's 
 %service.\\
-\vspace{0pt}
+
 \textbf{Security Issues in CDNs.} More prevalent in the literature than defense are attacks on CDNs.  Liang et al., studied 
 20 CDN providers and found that there are many problems with HTTPS practice in CDNs~\cite{liang2014https}.  Some of these 
 problems include: invalid certificates, private key sharing, neglected revocation of stale certificates, and 
