--- a/pets/main.tex
+++ b/pets/main.tex
@@ -4,6 +4,7 @@
 %\RequirePackage[no-math]{fontspec}%(only for the luatex or the xetex engine)
 \usepackage[big]{dgruyter_NEW}
 \usepackage{xspace}
+\usepackage{balance}
 \RequirePackage{tikz}
 \usetikzlibrary{arrows}
 
@@ -80,7 +81,7 @@
 
 
 %% ###################################################################
-
+\newpage
 {\footnotesize \bibliographystyle{acm}
 \bibliography{paper}}
 
