content delivery, not content distribution

--- a/WWW/abstract.tex
+++ b/WWW/abstract.tex
@@ -1,5 +1,5 @@
 \begin{abstract} 
-{As publishers increasingly use Content Distribution Networks
+{As publishers increasingly use Content Delivery Networks
 (CDNs) to distribute content across geographically diverse networks, 
 CDNs themselves are becoming unwitting targets of requests for both
 access to user data and content takedown. From copyright infringement to
