--- a/WWW/background.tex
+++ b/WWW/background.tex
@@ -5,7 +5,7 @@ We now outline how a CDN typically operates, including what information it
 has access to. We also discuss some of the ongoing legal
 questions that CDNs currently face.
 
-\subsection{Content Distribution Networks}
+\subsection{Content Delivery Networks}
 CDNs cache content as a service to content publishers.  A 
 content publisher may wish to use a CDN provider for several reasons:
 
