--- a/WWW/intro.tex
+++ b/WWW/intro.tex
@@ -11,7 +11,7 @@
 %for example, highlights the possibility that governments may move data across
 %borders to facilitate surveillance~\cite{arnbak2015loopholes}.  
 
-As Content Distribution Networks (CDNs) host more content,
+As Content Delivery Networks (CDNs) host more content,
 they are fast becoming targets of requests for information about their content
 and who is requesting it, as well as requests for takedown of material ranging
 from alleged copyright violations to offensive content. The shifting legal and
