--- a/WWW/main.tex
+++ b/WWW/main.tex
@@ -52,14 +52,14 @@
 
   %\affil[4]{Princeton University, E-mail: jrex@cs.princeton.edu}
 
-  \title{ OCDN: Oblivious Content Distribution Networks}
+  \title{ OCDN: Oblivious Content Delivery Networks}
 
 
   %\subtitle{...}
 
   \input{abstract}
 
-  \keywords{privacy, content distribution networks}
+  \keywords{privacy, content delivery networks}
 
  
 
